--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .form-container {
-  position: relative;
+  margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
   width: 389px;
@@ -23,11 +23,11 @@ body {
   color: #797EA3;
 }
 
-.input {
+/* .input {
   background: #171929;
   border-radius: 0;
   border: 0 0 0 1px;
-}
+} */
 
 input {
   outline: none;
@@ -92,4 +92,9 @@ a {
 
 span {
   vertical-align: middle;
+}
+
+.is-invalid:focus {
+  box-shadow: none;
+  border-bottom: 1px solid #c63242;
 }
